cabal-version:       >=1.10
name:                CanonGame
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file:        LICENSE
author:              Guillaume Bouchard
maintainer:          guillaum.bouchard@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable CanonGame
  main-is:             Main.hs
  build-depends:       base >=4.12 && <4.13
                     , gloss
                     , gloss-juicy
                     , random
                     , apecs
                     , apecs-gloss
  default-language:    Haskell2010
